# edgeai-hw6

./: .gitignore  Dockerfile.ci  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
calibration/: README.md  accuracy_baseline.json  calibrate_int8.py  calibration.yaml
deploy/: deploy.sh  docker-compose.yml  healthcheck.sh  power_profile.json  rollback.sh
docs/: OPTIMIZATION.md  ROLLBACK.md
src/: healthcheck.py  inference_node.py
tests/: test_accuracy.py  test_healthcheck.py  test_inference.py  test_smoke.py
tests/integration/: test_jetson_e2e.py
