[project]
name = "edgeai-hw6"
version = "0.1.0"
description = "HW6 — Optimized, Power-Tuned Edge-AI Service with Production CI/CD"
# Pin to the 3.10 line — same as Lab 9/10/HW5. The dustynv container and
# the Jetson system Python are both 3.10. ">=3.10" makes pdm consider
# 3.11+ wheels it would later have to skip.
requires-python = "==3.10.*"
license = {text = "MIT"}
# Minimal host-side deps. Heavy ML packages (ultralytics, opencv-python,
# onnxruntime) live in requirements.txt — that's the source of truth for
# what gets pip-installed inside Dockerfile.ci. The host PDM venv is just
# for the dev loop (lint, tests, security scans). Match HW5's pattern:
# heavy ML stays in containers; host PDM is small.
#
# NOTE: Step 0.5 of HW6 instructs students to REPLACE this slim config
# with the full HW5-style 5-check compliance pipeline (ruff strict, mypy,
# bandit, pylint, plus pdm scripts: check, ci, test-cov etc.). This
# reference repo is intentionally pre-Step-0.5 — it shows the baseline
# students start from. The compliance refactor (class-per-file +
# annotations + docstrings) is the student's HW6 work.
dependencies = [
    "paho-mqtt>=2.0",
    "numpy>=1.26,<2",
]

[tool.pdm]
# Not building a sdist/wheel — just managing the dev environment for the
# top-level scripts and tests. distribution=false prevents pdm from trying
# to auto-discover packages, which fails when there are .py files at the
# repo root AND in src/ AND in tests/.
distribution = false

[tool.pdm.dev-dependencies]
# Test deps — local dev loop + CI's `test` job (paired versions).
test = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    # opencv + paho are needed by tests because src/inference_node.py
    # imports them at module load. Tests then mock the actual behavior.
    "opencv-python==4.10.0.84",
]
# Code quality — ruff + bandit + pip-audit (matches CI's `lint` and
# `security-scan` jobs). pip-audit reads requirements.txt at scan time;
# no pyproject config needed for it.
quality = [
    "ruff>=0.6",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "tests/*"]
branch = true                # also track branch (if/else) coverage

[tool.coverage.report]
fail_under = 90              # Part B's coverage gate threshold (matches HW4/HW5 convention)
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Small starter set — matches Lab 12's baseline. Step 0.5 of HW6 swaps
# this for the strict select+ignore from HW5 (B/UP/SIM/N/RUF/PLR2004/
# ANN*/D), enforced by `pdm run check`.
select = ["E", "F", "I", "W"]
ignore = ["E501"]   # line-too-long: leave for the formatter

[tool.bandit]
# B108 (hardcoded /tmp) is fixed at the source — write_health writes to
# /app/inference_health (under the container's WORKDIR), not /tmp.
# Tests are excluded from scanning by passing `bandit -r src/` (see CI).
exclude_dirs = ["tests", ".venv", ".pdm-build"]
